@@ -1,3 +1,5 @@
+2006/5/30 -- released version 20060530_trunk
+
 2006/5/29 -- released version 20060529_trunk
 
 2006/5/28 -- released version 20060528_trunk
